--- a/mapcomposer/app/applications/he/buildjs.cfg
+++ b/mapcomposer/app/applications/he/buildjs.cfg
@@ -1,15 +1,43 @@
-[excanvas.js]
+[ie8_compat.js]
 root = static/script
 include = 
-    libs/excanvas.compiled.js
+    libs/excanvas.min.js
+    
+[r2d3.js]
+root = static/script
+include = 
+    libs/r2d3.min.js
+    libs/aight.min.js
+    libs/es5-sham.min.js
+
+[d3.js]
+root = static/script
+include = 
+    libs/d3.min.js
 
 [c3.js]
 root = static/script
 include = 
-    libs/d3.min.js
+    libs/jquery-1.11.1.min.js
     libs/c3.min.js
     widgets/charts/C3Chart.js
     widgets/charts/ChartPanel.js
+    
+[mg.js]
+root = static/script
+include =
+    libs/jquery-1.11.1.min.js
+    libs/metricsgraphics.min.js
+    widgets/charts/MGChart.js
+
+[dc.js]
+root = static/script
+include = 
+    libs/crossfilter.min.js
+    libs/dc.min.js
+    widgets/charts/DCChart.js
+    widgets/charts/ChartPanel.js
+    
 [chartjs.js]
 root = static/script
 include = 
@@ -29,8 +57,12 @@ include =
     widgets/grid/FinancialHighlightsGrid.js
     widgets/PipelineStatistics.js
     widgets/ContractsByCategory.js
+    widgets/grid/ContractExpirationsGrid.js
+    widgets/grid/ScheduledCapacitiesGrid.js
     plugins/GCD.js
     plugins/CapacityData.js
     plugins/Shippers.js
     plugins/Statistics.js
+    plugins/ResultsGrid.js
+    GCDViewer.js
     
